# test-prm-9ipkpj

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  (+2 more)
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
src/backend/src/: __init__.py
src/backend/src/api/: __init__.py  dependencies.py  error_handlers.py  middleware.py  websocket.py
src/backend/src/api/routes/: __init__.py  auth.py  context.py  health.py  integrations.py  organizations.py  templates.py  users.py
src/backend/src/config/: __init__.py  database.py  logging.py  security.py  settings.py
src/backend/src/contextual_engine/: __init__.py  inference.py  llama_config.py  models.py  processor.py  training.py
src/backend/src/data/: __init__.py
src/backend/src/data/migrations/: README.md  env.py  script.py.mako
src/backend/src/data/models/: __init__.py  context.py  integration.py  organization.py  template.py  user.py
src/backend/src/data/repositories/: __init__.py  base.py  context.py  integration.py  organization.py  template.py  user.py
src/backend/src/data/schemas/: __init__.py  context.py  integration.py  organization.py  template.py  user.py
src/backend/src/integration_hub/: __init__.py  client.py  config.py  sync.py
src/backend/src/integration_hub/adapters/: __init__.py  analytics.py  crm.py  documents.py
src/backend/src/security/: __init__.py  authentication.py  authorization.py  encryption.py  jwt.py  oauth2.py
src/backend/src/services/: __init__.py  context_service.py  integration_service.py  organization_service.py  template_service.py  user_service.py
src/backend/src/utils/: __init__.py  cache.py  constants.py  exceptions.py  helpers.py  validators.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: __init__.py  test_auth.py  test_context.py  test_integrations.py  test_organizations.py  test_templates.py  test_users.py
src/backend/tests/unit/: __init__.py  test_contextual_engine.py  test_data_models.py  test_integration_hub.py  test_security.py  test_services.py
(+176 files in other folders)
