[tool.poetry]
name = "coreos-backend"
version = "0.1.0"
description = "AI-first business operating system backend service"
authors = ["COREos Team"]
readme = "README.md"
packages = [
    { include = "src" }
]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"  # High-performance async API framework
uvicorn = "^0.22.0"  # ASGI server implementation
sqlalchemy = "^2.0.0"  # SQL toolkit and ORM
alembic = "^1.11.0"  # Database migration tool
pydantic = "^2.0.0"  # Data validation using Python type annotations
python-jose = {extras = ["cryptography"], version = "^3.3.0"}  # JWT token handling
passlib = {extras = ["bcrypt"], version = "^1.7.4"}  # Password hashing
redis = "^4.6.0"  # Redis client library
asyncpg = "^0.27.0"  # Async PostgreSQL driver
python-multipart = "^0.0.6"  # Multipart form data parsing
torch = "^2.0.0"  # PyTorch for AI models
transformers = "^4.30.0"  # Hugging Face Transformers
pandas = "^2.0.0"  # Data manipulation library
boto3 = "^1.26.0"  # AWS SDK
azure-storage-blob = "^12.16.0"  # Azure Blob Storage SDK

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"  # Testing framework
pytest-cov = "^4.0.0"  # Test coverage reporting
pytest-asyncio = "^0.21.0"  # Async test support
black = "^23.3.0"  # Code formatter
isort = "^5.12.0"  # Import sorter
mypy = "^1.4.0"  # Static type checker
flake8 = "^6.0.0"  # Code linter
pre-commit = "^3.3.3"  # Git hooks manager

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-ra -q --cov=src"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]